feat: refactor api
